<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.messenger.practive.mentalhealthadvisordr.CreateQuizActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_marginTop="60dp"
        android:id="@+id/quizRec">



    </android.support.v7.widget.RecyclerView>


        <EditText
        android:id="@+id/questionTxtField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/questionTxtField"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/answerOneTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enterAnswerHint"
        android:inputType="textPersonName" />

        <EditText
            android:id="@+id/answerTwoTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/answerTwoHint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/answerThreeTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/answerThreeHint"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="submitChoice"
            android:text="@string/AddBtn" />

    </LinearLayout>

</ScrollView>
