<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.messenger.practive.mentalhealthadvisordr.ProfileActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/homePageTxt"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/homePageIntroTxt"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp" />
        <Button
            android:id="@+id/createQuizBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createQuizBtn"
            android:onClick="createQuiz"/>

        <Button
            android:id="@+id/enterLocationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter Location"
            android:onClick="enterLocation" />
        <Button
            android:id="@+id/enterIssueBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter Issue"
            android:onClick="enterIssue"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    </RelativeLayout>



</LinearLayout>
